# agender

./: CMakeLists.txt  main.py  package.xml
agender_ros/: readme.md
agender_ros/scripts/: agender_ros_test.py
agender_ros/scripts/age_gender_ssrnet/: SSRNET_model.py
agender_ros_msgs/: CMakeLists.txt  package.xml
agender_ros_msgs/msg/: PeopleDescriptors.msg  PersonDescriptors.msg
models/emotion_recognition/: source.md
scripts/: agender_ros_test.py
